<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_button_label">Save</string>
    <string name="edit_item_text">Edit Item Below:</string>
    <string name="edit_item_date">mm/dd/year</string>
    <string name="High_priority">High</string>
    <string name="Medium_priority">Med</string>
    <string name="Low_priority">Low</string>
    <string name="setPriority">Set Priority</string>
    <string name="due_date">Date</string>
    <string name="due_date_"></string>
    <string name="Due_date_textView">Due By :</string>

</resources>
